Fixed overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@
 }
 div.logConsole{
     width: 100%;
-    height:50%;
+    height:85%;
     position: absolute;
-    overflow: auto;
+    overflow-y: auto;
 }
